👯🐦 Checkpoint ./index.html:17611839/50

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
           segmentsWidth: 299;
           segmentsHeight: 284;
           zPosition: 100;"
+          position="0 -23 -200"
       ></a-entity>
       
       <!-- Lights -->
@@ -43,7 +44,7 @@
       <a-sky color="#ffd4a6" radius="5000"></a-sky>
       
       <!-- Monolith -->
-      <a-box position="-1 0.5 -15" rotation="0 45 0" color="#000" width="4" height="9" depth="1" shadow></a-box>
+      <a-box position="-1 5 -15" rotation="0 45 0" color="#000" width="4" height="9" depth="1" shadow></a-box>
     </a-scene>
   </body>
 </html>
