🌁💠 Checkpoint ./index.html:17611839/70

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <a-entity light="type: ambient; color: #999999"></a-entity>
       
       <!-- Sun Sphere -->
-      <a-entity geometry="primitive: sphere; radius: 5;" fog="type:linear; color: yellow;" position="1 15 -15"></a-entity>
+      <a-entity geometry="primitive: sphere; radius: 5;" fog="type:linear; color: yellow;" material="color: yellow; shader: standard;" position="1 15 -15"></a-entity>
       
       <!-- Martian Sphere -->
       <!--<a-sphere src="https://cdn.glitch.com/942c2228-c76f-4e93-b4bd-452d36ee82c9%2FMars_G%C3%A9olocalisation.jpg?v=1599989507182" position="0 15 -20"></a-sphere>-->
