🐆👶 Checkpoint ./index.html:17611839/6158

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 
       <!-- Lights -->
       <a-entity
-        light="type: directional; color: #AFA; intensity: 0.7; castShadow: true; shadowCameraVisible: true;"
-        position="30 300 5000"
+        light="type: directional; color: #f8872a; intensity: 0.65; castShadow: true; shadowCameraVisible: true;"
+        position="-30 300 0"
       ></a-entity>
       <a-entity light="type: ambient; color: #999999"></a-entity>
 
@@ -75,6 +75,7 @@
         height="9"
         depth="1"
         shadow="cast: true;"
+        material="color: #000;"
       ></a-box>
 
       <a-plane
