💏🌖 Checkpoint ./index.html:17611839/25

--- a/index.html
+++ b/index.html
@@ -78,14 +78,14 @@
         material="color: #000;"
       ></a-box>
 
-      <a-plane
+      <a-box
         color="#ccc"
         material="color:white; shader: standard;"
-        position="1 1 -15"
+        position="1 0.5 -15"
         shadow="receive: true;"
         rotation="-90 0 0"
-        scale="30 30 30"
-      ></a-plane>
+        scale="30 30 0.5"
+      ></a-box>
     </a-scene>
   </body>
 </html>
