--- a/index.html
+++ b/index.html
@@ -46,18 +46,19 @@
 
       <!-- Lights -->
       <a-entity
-        light="type: directional; color: #f8872a; intensity: 0.65; castShadow: true; shadowCameraVisible: true;"
-        position="-30 300 0"
+        light="type: directional; color: #f8872a; intensity: 0.65; castShadow: true; shadowCameraVisible: false; shadowCameraLeft: -25; shadowCameraRight: 15; shadowCameraTop: 15;"
+        position="-30 30 0"
       ></a-entity>
       <a-entity light="type: ambient; color: #999999"></a-entity>
 
       <!-- Sun Sphere -->
+      <!--
       <a-entity
         geometry="primitive: sphere; radius: 5;"
         material="color: yellow;"
-        position="1 15 -15"
+        position="6 15 -15"
         shadow="cast: true;"
-      ></a-entity>
+      ></a-entity>-->
 
       <!-- Martian Sphere -->
       <!--<a-sphere src="https://cdn.glitch.com/942c2228-c76f-4e93-b4bd-452d36ee82c9%2FMars_G%C3%A9olocalisation.jpg?v=1599989507182" position="0 15 -20"></a-sphere>-->
@@ -67,7 +68,7 @@
 
       <!-- Monolith -->
       <a-box
-        position="-1 5 -15"
+        position="-1 4.5 -15"
         rotation="0 45 0"
         color="#000"
         width="4"
@@ -77,6 +78,7 @@
         material="color: #000; shader: standard;"
       ></a-box>
 
+      <!--
       <a-box
         color="#ccc"
         material="color:white; shader: standard;"
@@ -84,7 +86,7 @@
         shadow="receive: true; cast: true;"
         rotation="-90 0 0"
         scale="30 30 0.5"
-      ></a-box>
+      ></a-box>-->
     </a-scene>
   </body>
 </html>
