--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </a-assets>
 
       <!-- Camera -->
-      <a-entity position="0 1.6 0">
+      <a-entity position="0 1.6 0" rotation="0 -93 0">
         <a-entity camera look-controls wasd-controls></a-entity>
       </a-entity>
 
