🏮💰 Checkpoint ./index.html:17611839/66

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           zPosition: 100;"
         position="0 -23 -200"
         shadow="receive: true;"
-        static-body="shape: box;"
+        static-body
       ></a-entity>
 
       <!-- Lights -->
