--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <a-scene renderer="antialias: true" shadow="type: pcfsoft" physics="debug: true">
+      
       <!-- Assets Management System -->
       <a-assets>
         <img
@@ -24,7 +25,7 @@
       </a-assets>
 
       <!-- Camera -->
-      <a-entity position="0 1.6 0" rotation="0 -93 0">
+      <a-entity position="0 1.6 0" rotation="0 -93 0" dynamic-body="velocity: 10;">
         <a-entity camera look-controls wasd-controls></a-entity>
       </a-entity>
 
