--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.rawgit.com/donmccurdy/aframe-physics-system/v4.0.1/dist/aframe-physics-system.js"></script>
   </head>
   <body>
-    <a-scene renderer="antialias: true" shadow="type: pcfsoft" physics="debug: true; gravity: -9.8;">
+    <a-scene renderer="antialias: true" shadow="type: pcfsoft" physics="debug: true; gravity: -1;">
       
       <!-- Assets Management System -->
       <a-assets>
@@ -44,7 +44,7 @@
           zPosition: 100;"
         position="0 -23 -200"
         shadow="receive: true;"
-        static-body
+        static-body="shape: box;"
       ></a-entity>
 
       <!-- Lights -->
@@ -64,7 +64,9 @@
       ></a-entity>-->
 
       <!-- Martian Sphere -->
-      <a-sphere dynamic-body src="https://cdn.glitch.com/942c2228-c76f-4e93-b4bd-452d36ee82c9%2FMars_G%C3%A9olocalisation.jpg?v=1599989507182" position="0 15 -20"></a-sphere>
+      <a-sphere dynamic-body src="https://cdn.glitch.com/942c2228-c76f-4e93-b4bd-452d36ee82c9%2FMars_G%C3%A9olocalisation.jpg?v=1599989507182" position="25 10 0"></a-sphere>
+      
+      <a-box position="25 1 -5" width="5" height="5" depth="0.5" rotation="-90 0 0" color="#ccc"></a-box>
 
       <!-- Sky -->
       <a-sky color="#C6A17D" radius="5000"></a-sky>
