--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.rawgit.com/donmccurdy/aframe-physics-system/v4.0.1/dist/aframe-physics-system.js"></script>
   </head>
   <body>
-    <a-scene renderer="antialias: true" shadow="type: pcfsoft" physics="debug: true; gravity: -1;">
+    <a-scene renderer="antialias: true" shadow="type: pcfsoft" physics="debug: true; gravity: -3.7;">
       
       <!-- Assets Management System -->
       <a-assets>
@@ -41,7 +41,7 @@
           zPosition: 100;"
         position="0 -23 -200"
         shadow="receive: true;"
-        static-body="shape: box;"
+        static-body="shape: hull;"
       ></a-entity>
 
       <!-- Lights -->
@@ -54,7 +54,7 @@
       <!-- Martian Sphere -->
       <a-sphere dynamic-body src="https://cdn.glitch.com/942c2228-c76f-4e93-b4bd-452d36ee82c9%2FMars_G%C3%A9olocalisation.jpg?v=1599989507182" position="24.5 15 -5"></a-sphere>
       
-      <a-box position="25 1 -5" width="5" height="5" depth="0.5" rotation="-90 0 0" color="#ccc" static-body></a-box>
+      <!--<a-box position="25 1 -5" width="5" height="5" depth="0.5" rotation="-90 0 0" color="#ccc" static-body></a-box>-->
 
       <!-- Sky -->
       <a-sky color="#C6A17D" radius="5000"></a-sky>
