☔️👨 Checkpoint ./index.html:17611839/7

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           zPosition: 100;"
         position="0 -23 -200"
         shadow="receive: true;"
-        static-body="shape: hull;"
+        static-body="shape: box;"
       ></a-entity>
 
       <!-- Lights -->
