🍅🚅 Checkpoint ./index.html:17611839/66

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <a-entity position="0 1.6 0" rotation="0 -93 0">
         <a-entity camera look-controls wasd-controls>
           <a-cursor></a-cursor>
+          <a-box position="0 1.6 0" dynamic-body></a-box>
         </a-entity>
       </a-entity>
 
