--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
       <!-- Camera -->
       <a-entity position="0 1.6 0" rotation="0 -93 0">
         <a-entity camera look-controls wasd-controls>
-          <a-cursor></a-cursor>
-          <a-box position="0 1.6 0" dynamic-body></a-box>
+          <a-cursor>
+          </a-cursor>
+          
         </a-entity>
       </a-entity>
 
@@ -74,6 +75,7 @@
         material="color: #000; shader: standard;"
       ></a-box>
       
+      <a-plane position="0 0 0" rotation="-90 0 0" color="#ccc" width="2" height="10" depth="0.5" static-body></a-plane>
       <a-plane position="0 0 5" rotation="-110 0 0" color="#ccc" width="2" height="10" depth="0.5" static-body></a-plane>
 
     </a-scene>
