--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
       </a-assets>
 
       <!-- Camera -->
-      <a-entity position="0 1.6 0" rotation="0 -93 0">
+      <a-entity position="0 1.6 0" rotation="0 -93 0" dynamic-body>
         <a-entity camera look-controls wasd-controls>
           <a-cursor>
           </a-cursor>
-          
+          <a-box position="0 0 0" scale="1 1.6 1"></a-box>
         </a-entity>
       </a-entity>
 
