--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     <script src="https://unpkg.com/aframe-terrain-model-component@1.0.0/dist/aframe-terrain-model-component.js"></script>
     <script src="https://cdn.rawgit.com/donmccurdy/aframe-physics-system/v4.0.1/dist/aframe-physics-system.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v6.1.1/dist/aframe-extras.min.js"></script>
   </head>
   <body>
     <a-scene shadow="type: pcfsoft" physics="debug: true; gravity: -3.7;">
@@ -25,7 +26,7 @@
 
       <!-- Camera -->
       <a-entity position="0 1.6 0" rotation="0 -90 0">
-        <a-entity camera look-controls wasd-controls>
+        <a-entity camera look-controls wasd-controls kinematic-body>
           <a-cursor> </a-cursor>
         </a-entity>
       </a-entity>
@@ -84,8 +85,8 @@
         static-body
       >
         <a-plane
-          position="0 -23 -200"
-          rotation="-45 0 0"
+          position="0 0 -20"
+          rotation="-10 0 0"
           color="#ccc"
           width="2"
           height="10"
