--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
       <!-- Camera -->
       <a-entity position="0 1.6 0" rotation="0 -90 0">
-        <a-entity camera look-controls wasd-controls kinematic-body>
+        <a-entity camera look-controls wasd-controls>
           <a-cursor> </a-cursor>
         </a-entity>
       </a-entity>
@@ -85,7 +85,7 @@
         static-body
       >
         <a-plane
-          position="0 0 -20"
+          position="0 10 -20"
           rotation="-10 0 0"
           color="#ccc"
           width="2"
